samples/_failures_safe/1761192308_cc7f7c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cca06a36.c: In function ‘tokenize’:
./samples/SAFE/__tmp_cca06a36.c:164:23: error: ‘max_t’ undeclared (first use in this function)
  164 |     if (token_count < max_t
      |                       ^~~~~
./samples/SAFE/__tmp_cca06a36.c:164:23: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_cca06a36.c:164:28: error: expected ‘)’ at end of input
  164 |     if (token_count < max_t
      |        ~                   ^
      |                            )
./samples/SAFE/__tmp_cca06a36.c:164:5: error: expected declaration or statement at end of input
  164 |     if (token_count < max_t
      |     ^~
